Complete html document.

--- a/index.html
+++ b/index.html
@@ -2,11 +2,26 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Excursion Project</title>
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
+    <title>Excursion Project</title>
   </head>
   <body>
+    <!-- "Main section" -->
     <h1>Discover hidden places in the world around you</h1>
-    <p><a href="https://hr98oeni5a607gcecctal0u48fq75h9dqjmqadjus81geapsipkg.codecademy.cloud/#">Download Excutsion (Coming soon!)</a></p>
+      <p><a class="cta" href="#">Download Excursion (Coming soon!)</a></p>
+      <video autoplay muted loop>
+        <source src="./resources/video/excursion.mp4" type="video/mp4">Your browser does not support the video tag.</video>
+    <!-- "First supporting section" -->
+    <h2>Your personal travel guide</h2>
+      <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+      <p><img class="camp" src="./resources/images/camp.jpg" alt="camp"></p>
+    <!-- "Second supporting section" -->
+    <p><img class="app" src="./resources/images/phone.png" alt="phone"></p>
+    <h2>Coming Soon for iPhone and Android</h2>
+      <p><a class="cta" href="#">Download Excursion (Coming soon!)</a></p>
+    <!-- "Footer" -->
+    <div class="footer">
+      <p>© Excursion</p>
+    </div>
   </body>
 </html>
