--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <!-- "Main section" -->
     <h1>Discover hidden places in the world around you</h1>
       <p><a class="cta" href="#">Download Excursion (Coming soon!)</a></p>
-      <video autoplay muted loop>
-        <source src="./resources/video/excursion.mp4" type="video/mp4">Your browser does not support the video tag.</video>
+      <video width="404" height="720" autoplay muted loop>
+        <source src="./resources/videos/excursion.mp4" type="video/mp4">Your browser does not support the video tag.</video>
     <!-- "First supporting section" -->
     <h2>Your personal travel guide</h2>
       <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
